--- a/cards.html
+++ b/cards.html
@@ -11,7 +11,7 @@
     <div class="cardcontainer">
       <div class="cardbg card1" data-tilt>
         <div class="img">
-          <img src="/images/img05.jpg" alt="image 1" />
+          <img src="img05.jpg" alt="image 1" />
         </div>
         <div class="content">
           <span>
@@ -33,7 +33,7 @@
 
       <div class="cardbg card2" data-tilt>
         <div class="img">
-          <img src="/images/img06.jpg" alt="image 2" />
+          <img src="img06.jpg" alt="image 2" />
         </div>
         <div class="content">
           <span>
@@ -55,7 +55,7 @@
 
       <div class="cardbg card3" data-tilt>
         <div class="img">
-          <img src="/images/img09.jpg" alt="image 3" />
+          <img src="img09.jpg" alt="image 3" />
         </div>
         <div class="content">
           <span>
