--- a/cards.html
+++ b/cards.html
@@ -10,7 +10,7 @@
   <body>
     <div class="cardcontainer">
       <div class="cardbg card1" data-tilt>
-          <img src="/Images/img05.jpg" alt="image 1" />
+          <img src="Images/img05.jpg" alt="image 1" />
         <div class="content">
           <span>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque ut
@@ -30,7 +30,7 @@
       </div>
 
       <div class="cardbg card2" data-tilt>
-          <img src="/Images/img06.jpg" alt="image 2" />
+          <img src="Images/img06.jpg" alt="image 2" />
         <div class="content">
           <span>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque ut
@@ -50,7 +50,7 @@
       </div>
 
       <div class="cardbg card3" data-tilt>
-          <img src="/Images/img09.jpg" alt="image 3" />
+          <img src="Images/img09.jpg" alt="image 3" />
         <div class="content">
           <span>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque ut
